fix: front-end init structure to be more readable and scalable

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,10 +9,3 @@
 
 @import 'common';
 @import 'theme';
-
-ul {
-    margin: 0;
-    padding: 0;
-    text-indent: 0;
-    list-style-type: none;
-}
